re PR tree-optimization/22442 (scev cprop causes wrong code)

PR tree-optimization/22442
	* tree-chrec.c (chrec_fold_multiply_poly_poly): Associate chrecs
	correctly.

From-SVN: r101962